# Intelligent-customer-service-Multi-Agent-system-for-new-energy-vehicles

./: .gitignore  .mcp.json  README.md  pyproject.toml  requirements.txt  run.py  start_cs_agent.bat
cs_agent/: __init__.py  app.py  checkpointer.py  graph.py  llm_client.py  main.py  mcp_server.py  memory.py  observability.py  schemas.py  state.py
cs_agent/evaluation/: eval_results.json  eval_set.json  run_eval.py
cs_agent/finetune/: intent_classifier.py  lora_train.py
cs_agent/knowledge/: faq.json  vehicles.json
cs_agent/nodes/: __init__.py  aftersales.py  charging.py  chitchat.py  complaint.py  order_tracking.py  purchase.py  roadside.py  router.py  vehicle_qa.py
cs_agent/tools/: hybrid_rag.py  lc_tools.py  ner_tool.py  rag_tool.py  ticket_tool.py
data/: diagnostic_report.txt  maintenance_record.txt  user_manual.txt
docs/: LAUNCH_CHECKLIST.md  WSL_CODE_RABBIT.md
ev_ner_agent/: __init__.py  main.py  model_client.py
ev_ner_agent/agent/: __init__.py  error_handler.py  json_parser.py  prompt_templates.py  react_loop.py
ev_ner_agent/schema/: battery_schema.py
ev_ner_agent/tools/: __init__.py  kg_searcher.py  pdf_extractor.py  schema_validator.py  table_extractor.py
scripts/: demo_react.py  evaluate.py  scrape_vehicles.py  visualize_graph.py
task_agent/: __init__.py  agents.py  app.py  diagnostics.py  evaluation.py  main.py  models.py  parsing.py  planner.py  providers.py  runtime.py  service.py  storage.py  tools.py
tests/task_agent/: test_cli.py  test_diagnostics.py  test_evaluation.py  test_planner.py  test_task_service.py  (+1 more)
