[project]
name = "ev-ai-unified-agent"
version = "0.2.0"
description = "Unified EV AI project: customer-service multi-agent + EV NER extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "PyMuPDF>=1.23.0",
    "tabula-py>=2.9.0",
    "jsonschema>=4.21.1",
    "pydantic>=2.6.0",
    "networkx>=3.2.1",
    "rapidfuzz>=3.6.1",
    "langgraph>=1.1.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "aiosqlite>=0.20.0",
    "sentence-transformers>=3.3.0",
    "faiss-cpu>=1.9.0",
    "gradio>=5.0.0",
    "jieba>=0.42.1",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ev_ner_agent", "cs_agent"]

